[metadata]
author = Florent Pigout
author_email = florent@toopy.org
description = Ein.
keywords =
license = MIT
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
name = ein
url = https://github.com/toopy/ein
version = 0.1

[options]
install_requires =
    aiocache
    aiofiles
    apscheduler
    python-decouple
    tukio
    ujson
packages = find:
namespace_packages =
    ein
zip_safe = True

[options.entry_points]
apscheduler.triggers =
    now = ein.contrib.apscheduler.triggers:NowTrigger
console_scripts =
	ein-run = ein.main:run

[options.extras_require]
test =
    flake8
    isort
    pytest
    pytest-mock

[wheel]
universal = 1
